--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,10 @@
 
 .home,
 .services,
-.emails,
-.sign-up {
+.emails {
     display: flex;
-    height: 90vh;
+    height: 100%;
+    min-height: 100%;
     align-items: center;
     justify-content: center;
     font-size: 3rem;
