--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,7 @@
 .footer-container {
     background-color: #242424;
+    height: 100px;
+    margin-bottom: 0;
     padding: 2rem 0 2rem 0;
     display: flex;
     flex-direction: column;
@@ -7,7 +9,7 @@
     align-items: center;
 }
 
-.footer-subscription {
+.footer-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,17 +21,17 @@
     color: #fff;
   }
   
-  .footer-subscription > p {
+  .footer-section > p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
   }
   
-  .footer-subscription-heading {
+  .footer-heading {
     margin-bottom: 10px;
     font-size: 24px;
   }
   
-  .footer-subscription-text {
+  .footer-text {
     margin-bottom: 10px;
     font-size: 20px;
   }
